# collique-delivery-fastapi

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  demo_main.py  docker-compose.yml  pyproject.toml  railway.json  railway_main.py  requirements.txt  test_api.py
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  stores.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  address.py  admin.py  cart.py  category.py  order.py  product.py  store.py  user.py
